# fletch

./: .env.example  .gitignore  NOTICE  README.md  TODOS.md  biome.json  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.claude/rules/: import-aliases.md
.github/workflows/: ci.yml  release.yml
cloudflare-worker/: README.md  package.json  wrangler.toml
cloudflare-worker/src/: index.ts
demo/: demo.js  icons.js  index.html  styles.css
docs/: FEATURE_MAP.md  RELEASING.md  isolation-site-checklist.md  isolation.md  multi-repo-followups.md  sandboxing.md
docs/workflows/: QA.md  SLICES.md  TECH_SPEC.md
extensions/: README.md
scripts/: build-base-image.md  download-tart.sh  fetch-models-catalog.ts  gen_tray_icon.py  generate-placeholder-icons.py  manual-bake.sh  release-local.sh  smoke-test.md
src/: App.svelte  App.tsx  api.ts  app.css  helpers.failed.test.ts  helpers.optimistic.test.ts  helpers.queued.test.ts  helpers.records.test.ts  helpers.session-refresh.test.ts  helpers.ts  helpers.turn-timing.test.ts  helpers.user-turns.test.ts  main.tsx  store.provider-overrides.test.ts  store.records.test.ts  store.reduce.test.ts  store.session-refresh.test.ts  store.ts  store.user-turns.test.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-macos-template.rgba
src-tauri/migrations/: 0001_initial_schema.sql  0002_project_settings.sql  0002_session_records.sql  0003_retire_session_events.sql  0003_run_setup_completed.sql  0004_account_profile.sql  0004_session_user_turns.sql  0005_session_ingest_offset.sql  0006_session_effort.sql  0007_account_oauth.sql  0008_worktree_base_sha.sql  0009_session_model.sql  0010_worktree_pr_number.sql  0011_custom_agents.sql  0012_turn_timings.sql  0012_user_turn_effort.sql  0012_user_turn_timing.sql  0013_workspace_sandbox_engine.sql  0014_pr_times_and_usage_daily.sql  0015_worktree_pr_snapshot.sql  0016_pending_messages.sql  0017_skills_and_mcp_servers.sql  0018_workflows.sql  0019_workflows_v1.sql  0020_workflow_base_branch.sql  0021_session_forked_context.sql  0022_repo_label.sql  0023_workspace_issue_ref.sql  0024_wf_run_issue_ref.sql  0025_drop_pending_message_thinking.sql
src-tauri/resources/: models-catalog.json
src-tauri/src/: activity.rs  agent.rs  agent_install.rs  agent_profile.rs  baker.rs  bin_resolve.rs  branding.rs  child_io.rs  codex_session.rs  commands.rs  database.rs  editors.rs  error.rs  exec_session.rs  extensions.rs  gh.rs  git.rs  git_dist.rs  git_state.rs  instructions.rs  issues.rs  keys.rs  lib.rs  main.rs  managed_session.rs  message_queue.rs  model_catalog.rs  names.rs  native_input.rs  new_project.rs  oauth.rs  power.rs  pty_bridge.rs  pty_session.rs  rpc.rs  run_env.rs  run_session.rs  sandbox.rs  secrets.rs  sentry_scrub.rs  (+9 more)
src-tauri/src/agent/: args.rs  capabilities.rs  mod.rs  probe.rs  spawn.rs  tests.rs  transcript.rs
src-tauri/src/agent/providers/: antigravity.rs  claude.rs  codex.rs  cursor.rs  mod.rs  opencode.rs  pi.rs
src-tauri/src/codegraph/: install.rs  mirror.rs  mod.rs
src-tauri/src/commands/: agent.rs  app.rs  files.rs  git_ops.rs  git_state.rs  github.rs  issues.rs  mod.rs  run.rs  session.rs  shell.rs  tooling.rs  workspace.rs
src-tauri/src/database/: connection.rs  crud.rs  marshal.rs  mod.rs  settings.rs  tests.rs  validate.rs
src-tauri/src/git/: branch.rs  cmd.rs  diff.rs  files.rs  mod.rs  transport.rs  worktree.rs
src-tauri/src/github/: checks.rs  client.rs  closes.rs  comments.rs  issues.rs  mod.rs  pr.rs  query.rs  repo.rs  types.rs
src-tauri/src/instructions/: git_actions.md  rpc_protocol.md  system_prompt.md
src-tauri/src/linear/: client.rs  mod.rs
src-tauri/src/rpc/: git.rs
src-tauri/src/run_detect/: go.rs  mod.rs  node.rs  port.rs  python.rs  ruby.rs  rust.rs
src-tauri/src/sandbox/: docker_probe.rs  engine.rs  mod.rs  policy.rs  provision.rs  seatbelt.rs
src-tauri/src/sandbox/docker/: auth.rs  cleanup.rs  cli.rs  engine.rs  image.rs  mod.rs  probe.rs  progress.rs  setup_token.rs
src-tauri/src/sandbox/docker/engine/: auth.rs  config_dir.rs  mod.rs  run_args.rs  settings.rs  tests.rs  util.rs
src-tauri/src/supervisor/: disposition.rs  events.rs  fork.rs  lifecycle.rs  messaging.rs  mod.rs  pr_set.rs  rpc_watch.rs  run.rs  session_sync.rs  shell.rs
src-tauri/src/workflow/: attempt.rs  blackboard.rs  budget.rs  comms.rs  definition.rs  driver.rs  gates.rs  gitops.rs  journal.rs  mod.rs  prompts.rs  scheduler.rs  spec.rs  tests_gate.rs  types.rs  yaml.rs
src-tauri/src/workflow/comms/: answer.rs  compose.rs  inbox.rs  mod.rs  route.rs  sender.rs  tests.rs
src-tauri/src/workflow/scheduler/: cleanup.rs  context.rs  drive.rs  mod.rs  orchestrate.rs  parallel.rs  persistence.rs  steps.rs  tests.rs
src-tauri/src/workspace/: agents.rs  factory.rs  message_queue.rs  mod.rs  paths.rs  query.rs  repos.rs  sessions.rs  tests.rs  turns.rs
src/adapters/: durable-lossless.test.ts  index.ts  policy.ts  types.ts  usage.test.ts  usage.ts
src/api/: events.ts  index.ts
src/components/: AgentHeader.tsx  AgentIdentityChip.tsx  AgentList.tsx  AgentPanes.tsx  AgentRow.tsx  AgentTerminal.tsx  BakeDialog.tsx  ChooseRepoDialog.tsx  CustomAgentView.tsx  DockerBuildToast.tsx  ErrorBoundary.tsx  FletchMark.tsx  Icon.tsx  Markdown.tsx  MissingBaseImageBanner.tsx  NativeAgentView.tsx  ProviderIcon.tsx  QMark.tsx  Sidebar.tsx  SpawnDialog.tsx  UpdateToast.tsx  ViewToggle.tsx  WorkspaceBar.tsx
src/data/: codeThemes.ts  landmarks.ts  languages.ts  mocks.ts  modelLabel.test.ts  modelLabel.ts  providerDetail.ts  providers.ts  slashCommands.ts
src/extensions/: backend.ts  registry.ts  types.ts
src/helpers/: agentLookups.ts  commands.ts  index.ts  spawn.ts  transcript.ts  usage.ts
src/lib/: AgentList.svelte  AgentPanes.svelte  AgentTerminal.svelte  SpawnDialog.svelte  WorkspaceBar.svelte  store.svelte.ts
src/pty/: buffers.ts  decode.ts
src/starterPack/: index.ts  install.test.ts  install.ts  presets.ts
src/storage/: db.ts  (+21 more)
(+564 files in other folders)
