[package]
name = "quorum"
version = "0.5.3"
description = "Spawn coding agents in isolated sandboxes"
authors = ["Alex Chaplinsky", "fwdai.org"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77"

[lib]
name = "quorum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Error/crash reporting. rustls (not native-tls) to avoid a system OpenSSL
# dependency on the Linux CI build. The Tauri plugin uses the Rust SDK as a
# single transport and auto-injects @sentry/browser, so frontend + backend
# errors land in one project. Disabled (no-op) when no DSN is baked in.
sentry = { version = "0.42", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
tauri-plugin-sentry = "0.5"
portable-pty = "0.8"
parking_lot = "0.12"
nix = { version = "0.29", features = ["signal"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
base64 = "0.22"

# Window state (size/position/maximized) persistence — desktop only.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
