[package]
name = "fletch"
version = "0.7.7"
description = "Spawn coding agents in isolated sandboxes"
authors = ["Alex Chaplinsky", "fwdai.org"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77"

[lib]
name = "fletch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Error/crash reporting. rustls (not native-tls) to avoid a system OpenSSL
# dependency on the Linux CI build. The Tauri plugin uses the Rust SDK as a
# single transport and auto-injects @sentry/browser, so frontend + backend
# errors land in one project. Disabled (no-op) when no DSN is baked in.
sentry = { version = "0.42", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
tauri-plugin-sentry = "0.5"
portable-pty = "0.8"
parking_lot = "0.12"
nix = { version = "0.29", features = ["signal"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
rusqlite_migration = "1"
# Native, synchronous message dialog for the fatal DB-init failure path. Used
# directly (not via tauri-plugin-dialog) because it runs on the calling thread
# and so works inside `setup`, before the Tauri event loop that the plugin's
# blocking dialog depends on. `common-controls-v6` enables custom buttons on
# Windows. `default-features = false` matches tauri-plugin-dialog's own rfd dep:
# rfd's defaults pull in the `async-std` backend, which clashes on Linux with
# the plugin's `tokio` backend (macOS gates that path out — hence local-only
# green). Already compiled in as a transitive dep of tauri-plugin-dialog.
rfd = { version = "0.16", default-features = false, features = ["common-controls-v6"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
base64 = "0.22"
# Portable git distribution (git_dist.rs): checksum-verify and unpack the
# pinned dugite-native tarball downloaded when no usable system git exists.
sha2 = "0.10"
flate2 = "1"
tar = "0.4"

# Window state (size/position/maximized) persistence — desktop only.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
